# hsc

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  docs.sh  output.md
.github/: codecov.yml
.github/workflows/: clippy-fmt.yml  release.yml  test.yml
benches/: burden.rs  sfs.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/accurate/: all.html  index.html  sidebar-items.js
docs/ahash/: all.html  index.html  struct.AHasher.html
docs/aho_corasick/: all.html  enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html  trait.StateID.html
docs/ansi_term/: all.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
docs/anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html  type.Stderr.html  type.Stdout.html
docs/anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
docs/anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
docs/anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/arrayvec/: all.html  index.html  struct.ArrayString.html  (+5 more)
src/: clap_app.rs  genotype.rs  lib.rs  main.rs  neutral.rs  process.rs  proliferation.rs  sfs.rs  snapshots.rs  stemcell.rs  subclone.rs  tree.rs
(+19911 files in other folders)
