[package]
name = "hsc"
version = "4.3.13"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.49", features = ["derive"] }
indicatif = { version = "*", features = ["rayon"] }
num-traits = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sosa = "3.0.5"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
rand_chacha = "0.9.0"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

