[package]
name = "hsc"
version = "4.3.14"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
indicatif = { version = "*", features = ["rayon"] }
num-traits = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sosa = "4.0.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
rand_chacha = "0.9.0"
arrow-array = "58.0.0"
arrow-schema = "58.0.0"
parquet = { version = "58", default-features = false, features = ["arrow"] }
log = "0.4.29"
env_logger = "0.11.9"

[dependencies.uuid]
version = "1.21.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

